--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - ./postgres_data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U airflow -d airflow || exit 1"]
       interval: 5s
@@ -25,6 +25,7 @@ services:
       - AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:${POSTGRES_PASSWORD}@postgres/airflow
       - AIRFLOW__CORE__DEFAULT_TIMEZONE=Asia/Shanghai
     volumes:
+      - ./logs:/opt/airflow/logs
       - ./requirements.txt:/opt/airflow/requirements.txt
     entrypoint: ["bash", "-c", "pip install --no-cache-dir -r requirements.txt && airflow db check-migrations || airflow db init && airflow users list | grep -q admin || airflow users create --username admin --password ${ADMIN_PASSWORD} --firstname Fang --lastname Yongchao --role Admin --email ${ADMIN_EMAIL}"]
     depends_on:
@@ -68,3 +69,6 @@ services:
     depends_on:
       airflow-init:
         condition: service_completed_successfully
+
+volumes:
+  postgres_data:
