--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,14 +26,13 @@ services:
       - AIRFLOW__CORE__DEFAULT_TIMEZONE=Asia/Shanghai
     volumes:
       - logs:/opt/airflow/logs
-      - ./requirements.txt:/opt/airflow/requirements.txt
     entrypoint: ["bash", "-c", "airflow db check-migrations || airflow db init && airflow users list | grep -q admin || airflow users create --username admin --password ${ADMIN_PASSWORD} --firstname Fang --lastname Yongchao --role Admin --email ${ADMIN_EMAIL}"]
     depends_on:
       postgres:
         condition: service_healthy
 
   airflow-webserver:
-    image: apache/airflow:2.10.5
+    build: .
     container_name: airflow-webserver
     environment:
       - AIRFLOW__CORE__EXECUTOR=LocalExecutor
@@ -45,14 +44,13 @@ services:
       - "8080:8080"
     volumes:
       - logs:/opt/airflow/logs
-      - ./requirements.txt:/opt/airflow/requirements.txt
-    entrypoint: ["bash", "-c", "pip install --no-cache-dir -r requirements.txt && airflow webserver"]
+    entrypoint: ["bash", "-c", "airflow webserver"]
     depends_on:
       airflow-init:
         condition: service_completed_successfully
 
   airflow-scheduler:
-    image: apache/airflow:2.10.5
+    build: .
     container_name: airflow-scheduler
     environment:
       - AIRFLOW__CORE__EXECUTOR=LocalExecutor
@@ -64,8 +62,7 @@ services:
       - ./dags:/opt/airflow/dags
       - ./plugins:/opt/airflow/plugins
       - ./include:/opt/airflow/include
-      - ./requirements.txt:/opt/airflow/requirements.txt
-    entrypoint: ["bash", "-c", "pip install --no-cache-dir -r requirements.txt && airflow scheduler"]
+    entrypoint: ["bash", "-c", "airflow scheduler"]
     depends_on:
       airflow-init:
         condition: service_completed_successfully
