--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
       timeout: 5s
       retries: 10
       start_period: 10s
+    networks:
+      - airflow-net
 
   airflow-init:
     image: my_airflow
@@ -30,6 +32,8 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+    networks:
+      - airflow-net
 
   airflow-webserver:
     image: my_airflow
@@ -48,6 +52,8 @@ services:
     depends_on:
       airflow-init:
         condition: service_completed_successfully
+    networks:
+      - airflow-net
 
   airflow-scheduler:
     image: my_airflow
@@ -66,6 +72,8 @@ services:
     depends_on:
       airflow-init:
         condition: service_completed_successfully
+    networks:
+      - airflow-net
 
 volumes:
   postgres_data:
